# Ai-Armor

./: Cargo.toml  README.md
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: main.rs
crates/core-crypto/: Cargo.toml
crates/core-crypto/src/: lib.rs
crates/core-detect/: Cargo.toml
crates/core-detect/src/: lib.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: lib.rs
crates/core-tokenize/: Cargo.toml
crates/core-tokenize/src/: lib.rs
crates/core-vault/: Cargo.toml
crates/core-vault/src/: lib.rs
scripts/: ubuntu-setup-and-build.sh  windows-setup-and-build.ps1
