[package]
name = "core-tokenize"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base32.workspace = true
core-model = { path = "../core-model" }
sha2.workspace = true
uuid.workspace = true
regex.workspace = true

[dev-dependencies]
core-detect = { path = "../core-detect" }
