[package]
name = "core-vault"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
core-crypto = { path = "../core-crypto" }
core-model = { path = "../core-model" }
core-tokenize = { path = "../core-tokenize" }
rusqlite.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
