[package]
name = "desktop-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
core-crypto = { path = "../../../crates/core-crypto" }
core-detect = { path = "../../../crates/core-detect" }
core-model = { path = "../../../crates/core-model" }
core-tokenize = { path = "../../../crates/core-tokenize" }
core-vault = { path = "../../../crates/core-vault" }
ed25519-dalek = "2"
base64 = "0.22"
arboard = "3"
parking_lot.workspace = true
regex.workspace = true
hex = "0.4"
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
windows.workspace = true

[features]
default = []
